fix: Contrast of Book2 title background

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -116,7 +116,7 @@ h1, h2, h3, h4, h5{
     border: 2px solid #4D767B;
 }
 .book-2, .link-2{
-    background-color: #27467D;
+    background-color: #486596;
     color: #94e264;
     border: 2px solid #C62022;
 }
